refactor(backend): resolve SonarQube findings across backend + build.gradle.kts
Mechanical/no-behavior-change cleanup pass through 18 flagged files:
Stream.collect(Collectors.toList()) -> .toList(), unused catch variables ->
unnamed patterns, duplicated string literals extracted to constants,
explicit-timezone Clock bean (new ClockConfig) replacing bare
LocalDateTime.now() calls, self-transactional-invocation fixes
(RecommendationService/SeriesService each split a public overload's shared
logic into a private non-@Transactional helper), and hardcoded Gradle
dependency versions extracted to named vals.

Also splits two over-threshold cognitive-complexity methods
(RecommendationService.validate/applyDiversityCap, SeriesService.update)
into several single-purpose private methods each well under the limit,
and reduces dedupeAndExclude's loop to a single continue by extracting
its body. No spec required -- a one-off quality pass, not a feature.

Full backend suite green throughout, including gradlew check (JaCoCo
80% coverage gate + SpotBugs high-confidence analysis).